[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ark"
version = "1.0.0"
requires-python = ">=3.12"
description = "The Ark framework."

authors = [
  { name = "Christopher E. Mower" }
]

maintainers = [
  { name = "Christopher E. Mower" },
  { name = "Refinath S N" },
  { name = "Abhineet Kumar" },
]

dependencies = [
  "numpy",
  "PyYAML>=6.0",
  "scipy",
  "gymnasium",
  "protobuf",
  "Pillow>=9.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ark = "ark.scripts.core:main"
